<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAD0"
    android:clickable="true"
    android:padding="30dp"
    tools:context=".AboutUs">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/ezakat" />


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:hint="@string/abouttext1"
                android:textAlignment="center"
                android:textSize="13sp"
                tools:layout_editor_absoluteX="-31dp"
                tools:layout_editor_absoluteY="155dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/abouttext3"
                android:textAlignment="center"
                android:textSize="13sp"
                tools:layout_editor_absoluteX="-31dp"
                tools:layout_editor_absoluteY="155dp" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textSize="13sp"
                tools:layout_editor_absoluteX="-31dp"
                tools:layout_editor_absoluteY="155dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="eZAKAT developer:"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/textView4"
                app:srcCompat="@drawable/aimi" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_marginTop="10dp"
                android:text="@string/developer1"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:text="@string/group"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:text="@string/developerId1"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:text="@string/developerEmail1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:autoLink="all"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/textView8"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/nafeis" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_marginTop="10dp"
                android:text="@string/developer2"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:text="@string/group"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_below="@id/textView10"
                android:text="@string/developerId2"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:text="@string/developerEmail2"
                android:textAlignment="center"
                android:textSize="12sp"
                android:autoLink="all"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/abouttext2"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/number"
                android:textAlignment="center"
                android:textSize="11sp"
                android:autoLink="all"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="11sp"
                android:autoLink="all"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/githublink"
                android:textAlignment="center"
                android:textSize="11sp"
                android:autoLink="all"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/copyright"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>